--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     font-family: system-ui, sans-serif;
+    background-color: white;
   }
 
   main {
