--- a/components/settings.html
+++ b/components/settings.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="../main.css">
 </head>
 <body>
+  <header>
+    <h2>lorem</h2>
+  </header>
   <main>
     <div class="view-content">
 
