--- a/components/settings.html
+++ b/components/settings.html
@@ -98,6 +98,7 @@
       tg.ready();
       tg.expand();
       tg.disableVerticalSwipes();
+      tg.setHeaderColor(isDark ? "#121212" : "#ffffff");
       tg.setBackgroundColor("#ffffff");
 
       // Слушаем смену темы в Telegram
